# CodeBase-Q-A-with-RAG

./: .gitignore  README.md  docker-compose.dev-infra.yml  docker-compose.server.yml  docker-compose.yml  pyproject.toml  test_pipeline.py  test_query.py  text.py
app/: main.py
app/db/: model.py  models.py
app/ingestion/: chunker.py  embedder.py  indexer.py
app/query/: hyde.py
app/workers/: tasks.py
backend/: .dockerignore  .env-sample  Dockerfile  README.md  celerybeat-schedule.db  pyproject.toml
backend/app/: auth.py  main.py
backend/app/db/: database.py  models.py
backend/app/ingestion/: embedder.py  indexer.py
backend/app/providers/: __init__.py  base.py  github.py  openforge.py
backend/app/reports/: __init__.py  pdf.py
backend/app/review/: __init__.py  bedrock_client.py  checklist.py  context_builder.py  diff_parser.py  reviewer.py
backend/app/scheduling/: __init__.py  beat.py
backend/app/storage/: __init__.py  clone_manager.py
backend/app/workers/: tasks.py
backend/migrations/: env.py
backend/migrations/versions/: 002_review_agent.py  003_review_attribution.py
backend/scripts/: bedrock_ping.py
backend/tests/: README.md  conftest.py
backend/tests/unit/: test_auth.py  test_bedrock_client.py  test_clone_manager.py  test_context_builder.py  test_diff_parser.py  test_embedder.py  test_fixtures.py  test_pdf.py  test_polling.py  test_providers.py  test_review_read_endpoints.py  test_reviewer.py  test_smoke.py
caddy/: Caddyfile
docs/: Codebase_Review_Agent_Implementation_Plan_v3_3_FINAL.docx  HANDOVER.md
frontend/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/layout/: RequireAuth.jsx  Shell.jsx  States.jsx
frontend/src/components/ui/: alert.jsx  badge.jsx  button.jsx  card.jsx
frontend/src/lib/: api.js  auth.jsx
frontend/src/pages/: Login.jsx  NotFound.jsx  ProjectDetail.jsx  ProjectsList.jsx  ReviewDetail.jsx  Wizard.jsx
migrations/versions/: 9022c7a69343_schema.py  c6aaee98661c_initial_schema.py
